Mon second commit

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <H1>Voici mon Premier Projet Git</H1>
+        <p> Voici mon second commit</p>
     </body>
 </html>
