--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <H1>Voici mon Premier Projet Git</H1>
         <p> Voici mon second commit</p>
+        <p> Je cherche à commiter un nouveau fichier</p>
     </body>
 </html>
